--- a/first project/project 1/project1.html
+++ b/first project/project 1/project1.html
@@ -39,7 +39,7 @@
     </div>
     <div class="boxes">
         <div class="box1">
-            <img src="C:\Users\hp\Downloads\original (1)\Assets project1\1.jpg" alt="walnet">
+            <img src="../img/1.jpg" alt="walnet">
 
             <div class="box1con">
                 <h1>WALNUTS</h1>
@@ -53,7 +53,7 @@
 
         <div class="box2">
 
-            <img src="C:\Users\hp\Downloads\original (1)\Assets project1\2.jpg" alt="orange">
+            <img src="../img/2.jpg" alt="orange">
             <div class="box2con">
                 <h1>ORANGES</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestiae illum voluptatibus
@@ -66,7 +66,7 @@
         </div>
         <div class="box3">
 
-            <img src="C:\Users\hp\Downloads\original (1)\Assets project1\3.jpg" alt="sandwich">
+            <img src="../img/3.jpg" alt="sandwich">
             <div class="box3con">
                 <h1>SANDWICH</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestiae illum voluptatibus
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="main">
-        <img src="C:\Users\hp\Downloads\original (1)\Assets project1\tomato.jpg" alt="tomato">
+        <img src="../img/tomato.jpg" alt="tomato">
     </div>
     <div class="footer">
         &copy;Seven2heaven2020
